--- a/style.css
+++ b/style.css
@@ -190,6 +190,26 @@ h2 {
   color: rgb(255, 255, 255);
 }
 
+#billedegalleri .section_wrapper {
+  padding: 10px;
+}
+
+@media (min-width: 500px) {
+  #billedegalleri .section_wrapper {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 40px;
+    /*   padding-right: 75px;
+    padding-left: 75px; */
+    margin-top: 10px;
+    margin: 20px;
+  }
+
+  /*  #billedegalleri .section_wrapper .col3 {
+    max-width: 80%;
+  } */
+}
+
 @media (min-width: 700px) {
   h1 {
     font-size: 7rem;
